Correct localized country name

--- a/lib/messagebundles/MessagesBundle_af.properties
+++ b/lib/messagebundles/MessagesBundle_af.properties
@@ -6,7 +6,7 @@
 LOCALE_LANGUAGE_CODE=af
 LOCALE_LANGUAGE_NAME=Afrikaans
 LOCALE_COUNTRY_CODE=
-LOCALE_COUNTRY_NAME=South Africa
+LOCALE_COUNTRY_NAME=Suid-Afrika
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
