--- a/lib/messagebundles/MessagesBundle_et.properties
+++ b/lib/messagebundles/MessagesBundle_et.properties
@@ -27,7 +27,7 @@ LAYOUT_RIGHT_TO_LEFT=false
 
 ################################################################################
 # Key/value pair for whether or not the tips of the day should be displayed.
-# The default is false (set to true in english resource).
+# The default is false (set to true if TOTDs exist).
 ################################################################################
 HAS_TIPS_OF_THE_DAY=false
 
