Overhaul of Connections GUI: - Added "Browse Host" functionality button to button row - Changed unclear "Add" functionality:   - was two unlabeled input fields in button row   - now "Add" button is an "Add..." button, which launches a small modal     dialog to enter the host and port information - Rearranged button row to "Add...", "Remove", and "Browse" - Fixed some random grammatical errors

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -621,7 +621,7 @@ CV_COLUMN_QRP_FULL=QRP (%)
 CV_COLUMN_QRP_USED=QRP Empty
 CV_BUTTON_REMOVE=Remove
 CV_BUTTON_TOOLTIP_REMOVE=Remove the Selected Connections
-CV_BUTTON_ADD=Add
+CV_BUTTON_ADD=Add...
 CV_BUTTON_TOOLTIP_ADD=Create a New Outgoing Connection
 CV_LABEL_KEEP_BEGIN=Keep approximately
 CV_LABEL_KEEP_END=connections up.
@@ -638,9 +638,12 @@ CV_TABLE_STRING_STANDARDS=Standard
 CV_TABLE_STRING_INCOMING=Incoming
 CV_TABLE_STRING_OUTGOING=Outgoing
 CV_TABLE_STRING_CONNECTED_ON=Connected on
-CV_STRING_CLIENT=[Leaf]
-CV_STRING_ULTRAPEER=[Ultrapeer]
+CV_STRING_CLIENT=Leaf
+CV_STRING_ULTRAPEER=Ultrapeer
 CV_TABLE_STRING_KBPSEC=KB/s
+CV_ADD_HOST_LABEL=Host:
+CV_ADD_PORT_LABEL=Port:
+CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -1292,9 +1295,9 @@ OPTIONS_ITUNES_PREFERENCE_LABEL=You can have LimeWire import newly downloaded so
 ################################################################################
 OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=You can share your Music on the Local Area Network and make it accessible for iTunes and other Digital Audio Access Protocol (DAAP) enabled Players.\n\nEnable Compatability Mode if you experience problems with iTunes Sharing. This mode uses more resources and is slower, but may fix problems.
-OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my Music:
+OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Share my music:
 OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Shared name:
-OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatability Mode
+OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Compatibility mode:
 
 OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Require password
 OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=You can limit the access to this service with a password.
