Updated Connection table's label to reflect servent status as well as reflect connection state.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -640,6 +640,7 @@ CV_TABLE_STRING_OUTGOING=Outgoing
 CV_TABLE_STRING_CONNECTED_ON=Connected on
 CV_STRING_CLIENT=Leaf
 CV_STRING_ULTRAPEER=Ultrapeer
+CV_STRING_STATUS=Connection Status:
 CV_TABLE_STRING_KBPSEC=KB/s
 CV_ADD_HOST_LABEL=Host:
 CV_ADD_PORT_LABEL=Port:
