Synchronizing removed ellipsis (...) in some resources

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -399,7 +399,7 @@ MENU_VIEW_THEMES_TITLE=Appliquer un thème
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
 MENU_VIEW_THEMES_TITLE_MNEMONIC=T
 #### MENU_VIEW_THEMES_GET_MORE=Get More Skins
-MENU_VIEW_THEMES_GET_MORE=Obtenir d'autres thèmes...
+MENU_VIEW_THEMES_GET_MORE=Obtenir d'autres thèmes
 #### MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
 MENU_VIEW_THEMES_GET_MORE_MNEMONIC=O
 #### MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
@@ -462,14 +462,14 @@ MENU_RESOURCES_PRO_ACCESSIBLE=Affiche la page web d'informations sur LimeWire PR
 MENU_TOOLS_TITLE=Outils
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=O
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=Statistiques
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=Affiche l'écran de statistiques d'activité réseau et fichiers.
-#### MENU_TOOLS_OPTIONS=Options...
-MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
+MENU_TOOLS_OPTIONS=Options
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=O
 #### MENU_TOOLS_OPTIONS_ACCESSIBLE=Display the Options Screen
@@ -480,43 +480,43 @@ MENU_HELP_TITLE=Aide
 #### MENU_HELP_TITLE_MNEMONIC=H
 MENU_HELP_TITLE_MNEMONIC=A
 #### MENU_HELP_USING_LIMEWIRE=Using LimeWire
-MENU_HELP_USING_LIMEWIRE=Utilisation de LimeWire...
+MENU_HELP_USING_LIMEWIRE=Utilisation de LimeWire
 #### MENU_HELP_USING_LIMEWIRE_MNEMONIC=U
 MENU_HELP_USING_LIMEWIRE_MNEMONIC=U
 #### MENU_HELP_USING_LIMEWIRE_ACCESSIBLE=Help for Using LimeWire
 MENU_HELP_USING_LIMEWIRE_ACCESSIBLE=Guide d'utilisation de LimeWire.
 #### MENU_HELP_TOTD=Tip of the Day
-MENU_HELP_TOTD=Astuce du jour...
+MENU_HELP_TOTD=Astuce du jour
 #### MENU_HELP_TOTD_MNEMONIC=D
 MENU_HELP_TOTD_MNEMONIC=A
 #### MENU_HELP_TOTD_ACCESSIBLE=Show the Tip of the Day Window
 MENU_HELP_TOTD_ACCESSIBLE=Affiche la fenêtre de l'astuce du jour.
 #### MENU_HELP_FAQ=FAQ
-MENU_HELP_FAQ=FAQ...
+MENU_HELP_FAQ=FAQ
 #### MENU_HELP_FAQ_MNEMONIC=F
 MENU_HELP_FAQ_MNEMONIC=F
 #### MENU_HELP_FAQ_ACCESSIBLE=Frequently Asked Questions for LimeWire
 MENU_HELP_FAQ_ACCESSIBLE=Consulte la foire aux questions courantes sur LimeWire.
 #### MENU_HELP_FORUM=Forum
-MENU_HELP_FORUM=Forum...
+MENU_HELP_FORUM=Forum
 #### MENU_HELP_FORUM_MNEMONIC=M
 MENU_HELP_FORUM_MNEMONIC=O
 #### MENU_HELP_FORUM_ACCESSIBLE=Access the LimeWire Users' Forum
 MENU_HELP_FORUM_ACCESSIBLE=Accéder au forum des utilisateurs de LimeWire.
 #### MENU_HELP_FRIEND=Tell a Friend
-MENU_HELP_FRIEND=En parler à un ami...
+MENU_HELP_FRIEND=En parler à un ami
 #### MENU_HELP_FRIEND_MNEMONIC=T
 MENU_HELP_FRIEND_MNEMONIC=E
 #### MENU_HELP_FRIEND_ACCESSIBLE=Tell a Friend about LimeWire
 MENU_HELP_FRIEND_ACCESSIBLE=Joindre un de vos ami pour lui parler de LimeWire.
 #### MENU_HELP_REVIEW=Review LimeWire
-MENU_HELP_REVIEW=Votre avis sur LimeWire...
+MENU_HELP_REVIEW=Votre avis sur LimeWire
 #### MENU_HELP_REVIEW_MNEMONIC=R
 MENU_HELP_REVIEW_MNEMONIC=V
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=Vous permet de soumettre une remarque ou suggestion sur LimeWire.
-#### MENU_HELP_ABOUT=About...
-MENU_HELP_ABOUT=À propos...
+#### MENU_HELP_ABOUT=About LimeWire
+MENU_HELP_ABOUT=À propos de LimeWire
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=P
 #### MENU_HELP_ABOUT_ACCESSIBLE=Information about LimeWire
@@ -807,7 +807,7 @@ STATISTICS_CONNECTION_DISCONNECTED=déconnecté
 #### STATISTICS_CONNECTION_DISCONNECTED_TIP=You are disconnected from the network. To connect, choose Connect from the File menu.
 STATISTICS_CONNECTION_DISCONNECTED_TIP=Vous êtes déconnecté du réseau. Pour vous connecter, choisissez Connecter dans le menu Fichier.
 #### STATISTICS_CONNECTION_CONNECTING=Connecting
-STATISTICS_CONNECTION_CONNECTING=connexion en cours...
+STATISTICS_CONNECTION_CONNECTING=connexion en cours
 #### STATISTICS_CONNECTION_CONNECTING_TIP=You are currently connecting to the network.
 STATISTICS_CONNECTION_CONNECTING_TIP=Veuillez patienter durant la connexion de votre agent au réseau.
 #### STATISTICS_CONNECTION_POOR=Poor
@@ -837,7 +837,7 @@ STATISTICS_CONNECTION_QUALITY=Qualité\u00a0:
 #### STATISTICS_CONNECTION_IDLE=Idle
 STATISTICS_CONNECTION_IDLE=Inactif
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
-STATISTICS_CONNECTION_WAKING_UP=Réveil...
+STATISTICS_CONNECTION_WAKING_UP=Réveil en cours
 #### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire est en cours de réactivation après une phase de sommeil.
 
@@ -1198,7 +1198,7 @@ PLAYLIST_OPTIONS_SHUFFLE=Aléatoire
 #### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
 PLAYLIST_DIALOG_OPEN_TITLE=Choix d'une Liste de lecture (.m3u)
 #### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
-PLAYLIST_DIALOG_SAVE_TITLE=Enregistrer la Liste de lecture sous...
+PLAYLIST_DIALOG_SAVE_TITLE=Enregistrer la Liste de lecture sous
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_DIALOG_SAVE_SAVE=Sauver
 #### PLAYLIST_CANNOT_PLAY_FILE=LimeWire cannot play the file
@@ -3360,7 +3360,7 @@ STATS_TOTAL_CONNECTION_ATTEMPTS_LABEL=Nombre total de tentatives de connections 
 #### STATS_TOTAL_HTTP_REQUESTS_TITLE=Incoming Requests
 STATS_TOTAL_HTTP_REQUESTS_TITLE=Requêtes de connexion
 #### STATS_TOTAL_HTTP_REQUESTS_LABEL=Total incoming requests received over time. This includes all connection attempts (GET, HEAD, GIV, CHAT, GNUTELLA, MAGNET, etc...).
-STATS_TOTAL_HTTP_REQUESTS_LABEL=Total des requêtes de connexion reçues au cours du temps. Cela inclue tous les types de requêtes (GET, HEAD, GIV, CHAT, GNUTELLA, MAGNET, etc..).
+STATS_TOTAL_HTTP_REQUESTS_LABEL=Total des requêtes de connexion reçues au cours du temps. Cela inclue tous les types de requêtes (GET, HEAD, GIV, CHAT, GNUTELLA, MAGNET, etc...).
 
 ################################################################################
 # Key/value pairs for advanced Download statistics
