--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -462,13 +462,13 @@ MENU_RESOURCES_PRO_ACCESSIBLE=Führt zur LimeWire PRO-Website.
 MENU_TOOLS_TITLE=Werkzeuge
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=W
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=Statistik
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=Zeigt das Statistikfenster an.
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=Einstellungen
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=E
@@ -515,7 +515,7 @@ MENU_HELP_REVIEW=LimeWire kommentieren
 MENU_HELP_REVIEW_MNEMONIC=K
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=Schicken Sie uns Ihre Meinung über LimeWire.
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=Über...
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=B
