--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -462,13 +462,13 @@ MENU_RESOURCES_PRO_ACCESSIBLE=Mostrar el sitio web de LimeWire PRO.
 MENU_TOOLS_TITLE=Herramientas
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=H
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=Estadísticas...
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=E
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=Mostrar la pantalla de estadísticas.
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=Opciones...
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=O
@@ -515,7 +515,7 @@ MENU_HELP_REVIEW=Revisar LimeWire
 MENU_HELP_REVIEW_MNEMONIC=R
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=Enviar reseña de LimeWire.
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=Acerca de...
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=E
