--- a/lib/messagebundles/MessagesBundle_hi.properties
+++ b/lib/messagebundles/MessagesBundle_hi.properties
@@ -462,13 +462,13 @@ NO=\u0928\u0939\u0940\u0902
 #? MENU_TOOLS_TITLE=
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 #? MENU_TOOLS_TITLE_MNEMONIC=
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 #? MENU_TOOLS_STATISTICS=
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 #? MENU_TOOLS_STATISTICS_MNEMONIC=
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 #? MENU_TOOLS_STATISTICS_ACCESSIBLE=
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 #? MENU_TOOLS_OPTIONS=
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 #? MENU_TOOLS_OPTIONS_MNEMONIC=
@@ -515,7 +515,7 @@ NO=\u0928\u0939\u0940\u0902
 #? MENU_HELP_REVIEW_MNEMONIC=
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 #? MENU_HELP_REVIEW_ACCESSIBLE=
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 #? MENU_HELP_ABOUT=
 #### MENU_HELP_ABOUT_MNEMONIC=A
 #? MENU_HELP_ABOUT_MNEMONIC=
