--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -462,13 +462,13 @@ MENU_RESOURCES_PRO_ACCESSIBLE=\u05d4\u05e6\u05d2 \u05d0\u05ea\u05e8 LimeWire PRO
 MENU_TOOLS_TITLE=\u05db\u05dc\u05d9\u05dd (T)
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=T
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=\u05e1\u05d8\u05d8\u05d9\u05e1\u05d8\u05d9\u05e7\u05d4... (S)
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=\u05d4\u05e6\u05d2 \u05de\u05e1\u05da \u05ea\u05d5\u05e6\u05d0\u05d5\u05ea \u05e1\u05d8\u05d8\u05d9\u05e1\u05d8\u05d9\u05d5\u05ea.
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=\u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea... (O)
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=O
@@ -515,7 +515,7 @@ MENU_HELP_REVIEW=\u05e1\u05e7\u05d5\u05e8 \u05d0\u05ea \u05d4\u05ea\u05d5\u05db\
 MENU_HELP_REVIEW_MNEMONIC=R
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=\u05d4\u05d2\u05d9\u05e9 \u05e1\u05e7\u05d9\u05e8\u05d4 \u05e2\u05dc \u05d4\u05ea\u05d5\u05db\u05e0\u05ea LimeWire.
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=\u05d0\u05d5\u05d3\u05d5\u05ea... (A)
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=A
