--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -462,13 +462,13 @@ MENU_RESOURCES_PRO_ACCESSIBLE=LimeWire PRO Web \u30b5\u30a4\u30c8\u3092\u8868\u7
 MENU_TOOLS_TITLE=\u30c4\u30fc\u30eb (T)
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=T
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=\u7d2f\u8a08... (S)
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=\u7d2f\u8a08\u753b\u9762\u3092\u8868\u793a\u3059\u308b
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=\u30aa\u30d7\u30b7\u30e7\u30f3... (O)
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=O
@@ -515,7 +515,7 @@ MENU_HELP_REVIEW=LimeWire \u3092\u8a55\u4fa1 (R)
 MENU_HELP_REVIEW_MNEMONIC=R
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=LimeWire \u306b\u3064\u3044\u3066\u306e\u610f\u898b\u30fb\u611f\u60f3\u3092\u9001\u308b
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=LimeWire \u306b\u3064\u3044\u3066... (A)
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=A
