--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -462,13 +462,13 @@ MENU_VIEW_LIBRARY_MNEMONIC=L
 #? MENU_TOOLS_TITLE=
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 #? MENU_TOOLS_TITLE_MNEMONIC=
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=\ud1b5\uacc4... (S)
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 #? MENU_TOOLS_STATISTICS_ACCESSIBLE=
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=\uc635\uc158... (O)
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=O
@@ -515,7 +515,7 @@ MENU_TOOLS_OPTIONS_MNEMONIC=O
 #? MENU_HELP_REVIEW_MNEMONIC=
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 #? MENU_HELP_REVIEW_ACCESSIBLE=
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=\uc815\ubcf4... (A)
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=A
