--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -462,13 +462,13 @@ MENU_RESOURCES_PRO_ACCESSIBLE=Vis LimeWire PRO webside.
 MENU_TOOLS_TITLE=Verktøy
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=V
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=Statistikk...
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=Vis statistikk på skjerm.
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=Alternativer...
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=A
@@ -515,7 +515,7 @@ MENU_HELP_REVIEW=Gi en anmeldelse av LimeWire
 MENU_HELP_REVIEW_MNEMONIC=G
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=Send inn anmeldelse av LimeWire.
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=Om...
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=O
