--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -462,13 +462,13 @@ MENU_RESOURCES_PRO_ACCESSIBLE=\u041f\u0435\u0440\u0435\u0439\u0442\u0438 \u043a 
 MENU_TOOLS_TITLE=\u0421\u0435\u0440\u0432\u0438\u0441 (T)
 #### MENU_TOOLS_TITLE_MNEMONIC=T
 MENU_TOOLS_TITLE_MNEMONIC=T
-#### MENU_TOOLS_STATISTICS=Statistics...
+#### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430... (S)
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
 MENU_TOOLS_STATISTICS_MNEMONIC=S
 #### MENU_TOOLS_STATISTICS_ACCESSIBLE=Display the Statistics Screen
 MENU_TOOLS_STATISTICS_ACCESSIBLE=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u044d\u043a\u0440\u0430\u043d \u0441\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0438
-#### MENU_TOOLS_OPTIONS=Options...
+#### MENU_TOOLS_OPTIONS=Options
 MENU_TOOLS_OPTIONS=\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430... (O)
 #### MENU_TOOLS_OPTIONS_MNEMONIC=O
 MENU_TOOLS_OPTIONS_MNEMONIC=O
@@ -515,7 +515,7 @@ MENU_HELP_REVIEW=\u041f\u0440\u0435\u0434\u043b\u043e\u0436\u0438\u0442\u044c \u
 MENU_HELP_REVIEW_MNEMONIC=R
 #### MENU_HELP_REVIEW_ACCESSIBLE=Submit a Review of LimeWire
 MENU_HELP_REVIEW_ACCESSIBLE=\u041f\u0440\u0435\u0434\u043b\u043e\u0436\u0438\u0442\u044c \u043e\u0431\u0437\u043e\u0440/\u0440\u0435\u0446\u0435\u043d\u0437\u0438\u044e \u043e LimeWire
-#### MENU_HELP_ABOUT=About...
+#### MENU_HELP_ABOUT=About LimeWire
 MENU_HELP_ABOUT=\u041e \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0435... (A)
 #### MENU_HELP_ABOUT_MNEMONIC=A
 MENU_HELP_ABOUT_MNEMONIC=A
